--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.4",
     "@types/sqlite3": "^3.1.6",
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "typescript": "^5.3.2"
   },
   "scripts": {
     "start:dev": "nodemon dist/index.js",
