--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.4",
     "@types/sqlite3": "^3.1.6",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
+    "prettier": "^3.1.0",
     "typescript": "^5.3.2"
   },
   "scripts": {
     "start:dev": "nodemon dist/index.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
-    "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\""
+    "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
+    "format": "prettier --write ."
   },
-  "author": "",
+  "author": "Gadani Himan Gurusinga - gadanihiman@gmail.com",
   "license": "ISC"
 }
