--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "description": "simple express typescript server",
   "main": "index.ts",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
-    "sqlite3": "^5.0.0"
+    "mysql2": "^3.6.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.4",
-    "@types/sqlite3": "^3.1.6",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
     "prettier": "^3.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
     "start:dev": "nodemon dist/index.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
-    "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
+    "migrate": "ts-node scripts/migrate.ts",
+    "seed": "ts-node scripts/seeder.ts",
     "format": "prettier --write ."
   },
   "author": "Gadani Himan Gurusinga - gadanihiman@gmail.com",
