--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.9.4",
     "concurrently": "^5.3.0",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.6",
     "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
@@ -24,6 +27,7 @@
     "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
     "start:dev": "nodemon dist/index.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
+    "test": "jest",
     "migrate": "ts-node scripts/migrate.ts",
     "seed": "ts-node scripts/seeder.ts",
     "format": "prettier --write ."
